--- a/S2/src/app/home/home.page.html
+++ b/S2/src/app/home/home.page.html
@@ -1,20 +1,42 @@
-<ion-header [translucent]="true">
+<!-- home.page.html -->
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-item>
+    <ion-label>Usuario</ion-label>
+    <ion-text>{{ usuario }}</ion-text>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input id="nombreInput" type="text" [(ngModel)]="nombre" name="nombre"></ion-input>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label position="floating">Apellido</ion-label>
+    <ion-input id="apellidoInput" type="text" [(ngModel)]="apellido" name="apellido"></ion-input>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label position="floating">Nivel de educación</ion-label>
+    <ion-select [(ngModel)]="nivelEducacion">
+      <ion-select-option value="primaria">Primaria</ion-select-option>
+      <ion-select-option value="secundaria">Secundaria</ion-select-option>
+      <ion-select-option value="universidad">Universidad</ion-select-option>
+    </ion-select>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label>Fecha Nacimiento</ion-label>
+    <input matInput [matDatepicker]="picker" [(ngModel)]="fechaNacimiento">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button expand="block" (click)="limpiarCampos()">Limpiar</ion-button>
+  <ion-button expand="block" (click)="mostrarInformacion()">Mostrar</ion-button>
 </ion-content>
