--- a/S2/src/app/login/login.page.html
+++ b/S2/src/app/login/login.page.html
@@ -1,29 +1,21 @@
-<ion-content [fullscreen]="true"  > 
-  <div class="login-container">
-    <ion-card class="login-card">
-      <ion-card-header>
-        <ion-card-title class="login-title">Bienvenidos</ion-card-title>
-      </ion-card-header>
 
-      <ion-card-content>
-        <ion-item class="input-item">
-          <ion-label position="floating" color="primary">Email</ion-label>
-          <ion-input type="email"></ion-input>
-        </ion-item>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Login</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-        <ion-item class="input-item">
-          <ion-label position="floating" color="primary">Password</ion-label>
-          <ion-input type="password"></ion-input>
-        </ion-item>
-
-        <ion-button expand="block" class="login-button" >Login</ion-button>
-        
-        <ion-button expand="block" fill="clear" color="light" class="register-button">Registrarse</ion-button>
-
-        <ion-text class="forgot-password" color="medium">
-          <a href="#">Olvidaste tu contraseña</a>
-        </ion-text>
-      </ion-card-content>
-    </ion-card>
-  </div>
+<ion-content>
+  <form (ngSubmit)="onSubmit()">
+    <ion-item>
+      <ion-label position="floating">Usuario</ion-label>
+      <ion-input type="text" [(ngModel)]="usuario" name="usuario" required minlength="3" maxlength="8" pattern="[a-zA-Z0-9]*"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input type="password" [(ngModel)]="password" name="password" required minlength="4" maxlength="4" inputmode="numeric"></ion-input>
+    </ion-item>
+    <ion-button expand="block" type="submit">Ingresar</ion-button>
+    <ion-button expand="block" color="medium" type="reset" (click)="limpiarCampos()">Limpiar</ion-button>
+  </form>
 </ion-content>
