--- a/S2/src/app/home/home.page.html
+++ b/S2/src/app/home/home.page.html
@@ -6,6 +6,10 @@
 </ion-header>
 
 <ion-content>
+  <p>Bienvenido a la página principal</p>
+</ion-content>
+
+<ion-content>
   <ion-item>
     <ion-label>Usuario</ion-label>
     <ion-text>{{ usuario }}</ion-text>
