--- a/S2/src/app/login/login.page.html
+++ b/S2/src/app/login/login.page.html
@@ -1,21 +1,23 @@
+<ion-content class="login-page">
+  <div class="login-card">
+    <h1 class="login-title">Login</h1>
+    <form>
+      <ion-item class="input-item">
+        <ion-label position="floating">Usuario</ion-label>
+        <ion-input type="text" [(ngModel)]="usuario" name="usuario" required minlength="3" maxlength="8" pattern="[a-zA-Z0-9]*"></ion-input>
+      </ion-item>
 
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
+      <ion-item class="input-item">
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input type="password" [(ngModel)]="password" name="password" required minlength="4" maxlength="4" inputmode="numeric"></ion-input>
+      </ion-item>
 
-<ion-content>
-  <form (ngSubmit)="onSubmit()">
-    <ion-item>
-      <ion-label position="floating">Usuario</ion-label>
-      <ion-input type="text" [(ngModel)]="usuario" name="usuario" required minlength="3" maxlength="8" pattern="[a-zA-Z0-9]*"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password" [(ngModel)]="password" name="password" required minlength="4" maxlength="4" inputmode="numeric"></ion-input>
-    </ion-item>
-    <ion-button expand="block" type="submit">Ingresar</ion-button>
-    <ion-button expand="block" color="medium" type="reset" (click)="limpiarCampos()">Limpiar</ion-button>
-  </form>
+      <ion-button expand="block" class="login-button">Ingresar</ion-button>
+      <ion-button expand="block" class="register-button">Registrarse</ion-button>
+
+      <div class="forgot-password">
+        <a href="#">¿Olvidaste tu contraseña?</a>
+      </div>
+    </form>
+  </div>
 </ion-content>
